--- a/locales/dmi/pl.po
+++ b/locales/dmi/pl.po
@@ -219,5 +219,31 @@ msgctxt "Navigation bar"
 msgid "Spec"
 msgstr "Spec."
 
+msgid "ETCS brake test required. Confirm to proceed."
+msgstr "Wymagany test hamulców. Potwierdź aby rozpocząć."
+
+msgid "ETCS brake test recommended."
+msgstr "Zalecany test hamulców"
+
+#: ../DMI/window/menu_settings.cpp:37 ../DMI/window/menu_tests.cpp:14
+msgid "Component testing"
+msgstr "Testowanie podzespołów"
+
+#: ../DMI/window/menu_tests.cpp:35
+msgid "In progress..."
+msgstr "Wykonywanie testu..."
+
+#: ../DMI/window/menu_tests.cpp:44
+msgid "OK"
+msgstr "OK"
+
+#: ../DMI/window/menu_tests.cpp:48
+msgid "Failed"
+msgstr "Niepowodzenie"
+
+#: ../DMI/window/menu_tests.cpp:53
+msgid "Type"
+msgstr "Rodzaj"
+
 #~ msgid "DEL"
 #~ msgstr "Z"
